--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -5,13 +5,14 @@
         <field name="name">Properties</field>
         <field name="res_model">estate.property</field>
         <field name="view_mode">tree,form,kanban</field>
-        <field name="context">{'search_default_current user':1,'search_default_Garden':True,'is_my_property':True}</field>
+        <field name="context">{'search_default_state_published':1}</field>
     </record>
     <record id="estate_property_view_tree" model="ir.ui.view">
         <field name="name">Property tree</field>
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
             <tree string="Property tree">
+                <field name="id"/>
                 <field name="name"/>
                 <field name="property_type_id"/>
                 <field name="postcode"/>
@@ -63,15 +64,21 @@
         </field>
     </record>
 
+    <record id="estate_property_kanban1" model="ir.actions.act_window.view">
+           <field name="view_mode">kanban</field>
+           <field name="view_id" ref="estate_property_kanban" />
+           <field name="act_window_id" ref="estate_property_action" />
+    </record>
+
     <record id="estate_property_view_form" model="ir.ui.view">
         <field name="name">Estate Property form</field>
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
             <form string="property">
                 <header>
-                    <button name="action_sold" type="object" string="Sold" class="oe_highlight"/>
-                    <button name="action_cancel" type="object" string="Cancel" class="oe_highlight"/>
-                    <field name="state" widget="statusbar" statusbar_visible="new,offer received,offer accepted,sold,canceled"/>
+                    <button name="action_sold" type="object" string="Sold" class="oe_highlight" attrs="{'invisible': [('state','in',['sold','canceled'])] }"/>
+                    <button name="action_cancel" type="object" string="Cancel" class="oe_highlight" attrs="{'invisible': [('state','in',['sold','canceled'])] }"/>
+                    <field name="state" widget="statusbar" statusbar_visible="publish pending,new,offer received,offer accepted,sold,canceled"/>
                 </header>
                 <sheet>
                     <span style="font-size:50px;font-weight:900;color:blue"><field name="name"/></span>
@@ -119,6 +126,7 @@
                         </page>
                         <page string="Other Info">
                             <group>
+                                <field name="seller_id"/>
                                 <field name="buyer_id"/>
                                 <field name="salesperson_id"/>
                             </group>
@@ -144,6 +152,8 @@
                 <filter string="Postcode" name="group_postcode" context="{'group_by':'postcode'}"/>
                 <filter name="current user" domain="[('salesperson_id', '=', uid)]"/>
                 <filter name="garden" domain="[('garden', '=', True)]"/>
+                <filter name="state_published" domain="[('state','!=','publish pending')]"/>
+                <filter name="state_not_published" domain="[('state','=','publish pending')]"/>
                  <filter name="4 or more bedrooms" domain="[('bedrooms', '>', 3)]"/>
                 <filter name="Properties with Garage" domain="[('garage', '=', True)]"/>
                 <filter name="2 bedrooms with garden" domain="[('bedrooms', '=', 2),('garage', '=', True)]"/>
@@ -197,12 +207,27 @@
             <tree string="Property tree">
                 <field name="price"/>
                 <field name="partner_id"/>
+                <field name="property_id" attrs="{'invisible': [(1,'=',1)] }"/>
                 <field name="date_deadline"/>
+                <field name="prop_state" invisible="1"/>
                 <field name="validity" string="Validity(Days)"/>
-                <button name="action_accepted" string="Accept" type="object" icon="fa-check"/>
-                <button name="action_refused" string="Refuse" type="object" icon="fa-times"/>
+                    <button name="action_accepted" string="Accept" type="object" icon="fa-check" attrs="{'invisible': [('prop_state','in',['offer accepted','sold','canceled'])] }"/>
+                    <button name="action_refused" string="Refuse" type="object" icon="fa-times" attrs="{'invisible': [('prop_state','in',['offer accepted','sold','canceled'])] }"/>
                 <field name="status"/>
             </tree>
+        </field>
+    </record>
+
+    <record id="property_offer_view_form" model="ir.ui.view">
+        <field name="name">Property Offers form</field>
+        <field name="model">estate.property.offer</field>
+        <field name="arch" type="xml">
+            <form string="offer form">
+                <field name="price"/>
+                <field name="partner_id"/>
+                <field name="date_deadline"/>
+                <field name="validity" string="Validity(Days)"/>
+            </form>
         </field>
     </record>
 
